Style Odin recipes
Added styles folder and some simple styling to the homepage and recipe.
Purpose is to practice some basic styling on our past project.

--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../styles/styles.css">
   <title>Simple Macaroni and Cheese</title>
 </head>
 <body>
-  <h1>Simple Macaroni and Cheese</h1>
+  <h1 class="title">Simple Macaroni and Cheese</h1>
   <img src="../img/mac-and-cheese.jpg" alt="macaroni and cheese" width="300" height="300">
   <h2>Description</h2>
   <p>
