--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
   <title>Odin Recipes</title>
 </head>
 <body>
-  <h1 class="title">Odin Recipes</h1>
-  <ul>
+  <h1 class="title"><span class="odin">Odin</span> Recipes</h1>
+  <ul class="recipe-list">
     <li>  
       <a href="recipes/mac-and-cheese.html" target="_blank" rel="noopener noreferrer">
       Simple Macaroni and Cheese
       </a>
-  </li>
+    </li>
+    <li>  
+      <a href="recipes/mac-and-cheese.html" target="_blank" rel="noopener noreferrer">
+      Simple Macaroni and Cheese
+      </a>
+    </li>
+    <li>  
+      <a href="recipes/mac-and-cheese.html" target="_blank" rel="noopener noreferrer">
+      Simple Macaroni and Cheese
+      </a>
+    </li>
   </ul>
 </body>
 </html>
